--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div class="col-lg-4">
           <img class="img-circle"  src="v9g1uuja7s.gif" alt="Generic placeholder image">
           <h2>Без воды!!!</h2>
-          <p>Нанотехнология, уника ...     лучше воспользуйтесь  <code id="pol"> YouTube</code></p>
+          <p>Нанотехнология, уника ...     лучше воспользуйтесь  <img class="img-circle" height=150px src="youtube-logo.jpg" alt="Generic placeholder image"></p>
 
 <!--          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>-->
         </div><!-- /.col-lg-4 -->
@@ -157,11 +157,11 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Технология. <span class="text-muted">Кратко.</span></h2>
+          <p class="lead">Наночастицы...  лёха напиши текст.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+         <iframe width="560" height="315" src="http://www.youtube.com/embed/ZxmzGzQ4EIs?rel=0" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
 
@@ -169,11 +169,11 @@
 
       <div class="row featurette">
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <iframe width="420" height="315" src="http://www.youtube.com/embed/4-HR0NxKaF4?rel=0" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="col-md-7">
-          <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Репортаж. <span class="text-muted">Москва.</span></h2>
+          <p class="lead">Алексей составьте текст.</p>
         </div>
       </div>
 
