--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
       </ol>
       <div class="carousel-inner">
         <div class="item active">
-          <img data-src="holder.js/900x500/auto/#777:#7a7a7a/text:First slide" alt="First slide">
+          <img  src="Cars%20coloring%20pages%2032.jpg" alt="First slide">
           <div class="container">
-            <div class="carousel-caption">
+            <div class="carousel-caption"  >
               <h1>Акция.</h1>
               <p>Пригласи 7 друзей в нашу группу и получи 50 % -ную скидку на одну мойку.</p>
               <p><a class="btn btn-lg btn-primary" href="http://vk.com/club47787698" role="button">Хочу мегаскидку!!!</a></p>
@@ -91,7 +91,7 @@
           </div>
         </div>
         <div class="item">
-          <img data-src="holder.js/900x500/auto/#666:#6a6a6a/text:Second slide" alt="Second slide">
+           <img  src="1.jpg" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>Для самых активных.</h1>
@@ -101,7 +101,7 @@
           </div>
         </div>
         <div class="item">
-          <img data-src="holder.js/900x500/auto/#555:#5a5a5a/text:Third slide" alt="Third slide">
+         <img  src="2.jpg" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>У тебя нет железного друга.</h1>
