--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
        
       </div>
 
-      <hr class="featurette-divider">
+<!--      <hr class="featurette-divider">-->
 
       <div class="row featurette">
         <div class="col-md-5">
