--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Акция!</a></li>
-                <li><a href="#about">Что есть "сухая мойка"</a></li>
-                <li><a href="#contact">Хочу попробывать!</a></li>
+                <li><a href="#new">Что есть "сухая мойка"</a></li>
+                <li><a href="#ok">Хочу попробывать!</a></li>
 <!--
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
@@ -121,7 +121,7 @@
     <!-- Marketing messaging and featurettes
     ================================================== -->
     <!-- Wrap the rest of the page in another container to center all the content. -->
-
+<a name="new"></a>
     <div class="container marketing">
 
       <!-- Three columns of text below the carousel -->
@@ -177,35 +177,35 @@
 
       <hr class="featurette-divider">
 
-      <div class="container">
-
+      <div class="container" href="#contact">
+     <div class="col-md-5">
       <form class="form-signin" role="form">
         <h2 class="form-signin-heading">Please sign in</h2>
-        <input type="email" class="form-control" placeholder="Email address" required autofocus>
+        <input type="color" class="form-control"  required autofocus>
         <input type="password" class="form-control" placeholder="Password" required>
-        <label class="checkbox">
-          <input type="checkbox" value="remember-me"> Remember me
-        </label>
+        <input type="datetime-local" class="form-control" placeholder="Password" required>
+        <input type="password" class="form-control" placeholder="Password" required>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
       </form>
 
     </div> <!-- /container -->
+    </div> <!-- /container -->
 
 
-      <hr class="featurette-divider">
+      <hr class="featurette-divider" >
 
       <!-- /END THE FEATURETTES -->
 
 
       <!-- FOOTER -->
       <footer>
-        <p class="pull-right"><a href="#">Back to top</a></p>
+        <p class="pull-right"><a href="#">Back to top</a><a href="#contact">Bмp</a></p>
         <p>&copy; 2014 Автоблеск, Inc. &middot;  Хорошие художники копируют, великие — воруют.  &middot;  </p>
       </footer>
 
     </div><!-- /.container -->
 
-
+<a name="ok"></a>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
