--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </ol>
       <div class="carousel-inner">
         <div class="item active">
-          <img  src="8.jpg" alt="First slide">
+<!--          <img  src="8.jpg" alt="First slide">-->
           <div class="container">
             <div class="carousel-caption"  >
               <h1>Акция.</h1>
@@ -127,7 +127,7 @@
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="col-lg-4">
- <img class="img-circle"  height=150px src="11.gif" alt="Generic placeholder image">
+ <img class="img"  height=150px src="1.svg" alt="Generic placeholder image">
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
          
@@ -137,7 +137,7 @@
 <!--          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>-->
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-<img class="img-circle" height=150px src="youtube.png" alt="Generic placeholder image">
+<img class="img" height=100px src="YouTube.svg" alt="Generic placeholder image">
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
 
@@ -192,10 +192,8 @@
      <div class="col-md-5">
       <form class="form-signin" role="form">
         <h2 class="form-signin-heading">Please sign in</h2>
-        <input type="color" class="form-control"  required autofocus>
-        <input type="password" class="form-control" placeholder="Password" required>
-        <input type="datetime-local" class="form-control" placeholder="Password" required>
-        <input type="password" class="form-control" placeholder="Password" required>
+       <input type="text" class="form-control" placeholder="Имя" required autofocus>
+        <input type="text" class="form-control" placeholder="Номер телефона" required>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
       </form>
 
