--- a/index.html
+++ b/index.html
@@ -59,6 +59,23 @@
 
 </head>
 <body class="metro" ng-app="tryHsk" ng-cloak>
+<script>
+    window.fbAsyncInit = function() {
+        FB.init({
+            appId      : '635617779878563',
+            xfbml      : true,
+            version    : 'v2.1'
+        });
+    };
+
+    (function(d, s, id){
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) {return;}
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/en_US/sdk.js";
+        fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+</script>
 <div class="loader" ng-show="globalLoader">
     <div class="spinner">
         <div class="rect1"></div>
