--- a/index.html
+++ b/index.html
@@ -132,7 +132,12 @@
         }
     }, 10);
 </script>
-
+<div
+        class="fb-like"
+        data-share="true"
+        data-width="450"
+        data-show-faces="true">
+</div>
 
 </body>
 </html>
