--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
             xfbml      : true,
             version    : 'v2.1'
         });
+
+        // ADD ADDITIONAL FACEBOOK CODE HERE
     };
 
     (function(d, s, id){
@@ -132,12 +134,7 @@
         }
     }, 10);
 </script>
-<div
-        class="fb-like"
-        data-share="true"
-        data-width="450"
-        data-show-faces="true">
-</div>
+
 
 </body>
 </html>
