--- a/index.html
+++ b/index.html
@@ -1,22 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="app">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Panel fixed positioning - jQuery Mobile Demos</title>
     <link rel="stylesheet" href="jquery.mobile-1.4.4.min.css">
     <link rel="stylesheet" href="jqm-demos.css">
-	<link rel="shortcut icon" href="../favicon.ico">
+	<!--<link rel="shortcut icon" href="../favicon.ico">-->
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
 	<script src="jquery.js"></script>
+	<script src="angular.js"></script>
+	<script src="engine.js"></script>
     <script src="jquery.mobile-1.4.4.js"></script>
+    <script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+    <script type="text/javascript">
+        navigator.splashscreen.show();
+        setTimeout(function() {
+            navigator.splashscreen.hide();
+        }, 2000);
+        ymaps.ready(init);
+        var myMap,
+                myPlacemark;
+
+        function init(){
+            myMap = new ymaps.Map("panel-fixed-page5", {
+                center: [55.76, 37.64],
+                zoom: 7
+            });
+
+            myPlacemark = new ymaps.Placemark([55.76, 37.64], {
+                hintContent: 'Москва!',
+                balloonContent: 'Столица России'
+            });
+
+            myMap.geoObjects.add(myPlacemark);
+        }
+    </script>
 </head>
-<body>
-<div data-role="page" class="jqm-demos" id="panel-fixed-page1" data-title="Panel fixed positioning">
+<body ng-controller="main">
+<div data-role="page" class="jqm-demos" id="panel-fixed-page1" data-title="Panel fixed positioning" >
 
     <div data-role="header" data-position="fixed">
-        <h1>Fixed header</h1>
-        <a href="#nav-panel" data-icon="bars" data-iconpos="notext">Menu</a>
+        <h1>Макет</h1>
+        <a href="#nav-panel-1" data-icon="bars" data-iconpos="notext">Menu</a>
         <a href="#add-form" data-icon="gear" data-iconpos="notext">Add</a>
     </div><!-- /header -->
 
@@ -28,38 +54,6 @@
 
         <p>The left panel contains a long menu to demonstrate that the framework will check the panel contents height and unfixes the panel so its content can be scrolled. In the right panel there is a short form that shows the fixed positioning.</p>
 
-		<div data-demo-html="#panel-fixed-page1"></div><!--/demo-html -->
-
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-
-        <a href="../" data-rel="back" data-ajax="false" class="ui-btn ui-shadow ui-corner-all ui-mini ui-btn-inline ui-icon-carat-l ui-btn-icon-left ui-alt-icon ui-nodisc-icon">Back</a>
-
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-
-        <p>We made the page a bit longer because you only see the panel fixed positioning if you can scroll the page :-)</p>
 
 	</div><!-- /content -->
 
@@ -67,10 +61,10 @@
     	<h4>Клиника. 2014</h4>
     </div><!-- /footer -->
 
-	<div data-role="panel" data-position-fixed="true" data-display="push" data-theme="b" id="nav-panel">
+	<div data-role="panel" data-position-fixed="true" data-display="push" data-theme="b" id="nav-panel-1">
 
 		<ul data-role="listview">
-            <li data-icon="delete"><a href="#" data-rel="close">Close menu</a></li>
+            <li data-icon="delete"><a href="#" data-rel="close">Закрыть меню</a></li>
                 <li><a href="#panel-fixed-page2">Акции</a></li>
                 <li><a href="#panel-fixed-page3">Услуги</a></li>
                 <li><a href="#panel-fixed-page4">Контакты</a></li>
@@ -99,16 +93,135 @@
 			</div>
         </form>
 
-	</div><!-- /panel -->
+	</div>
 
-</div><!-- /page -->
+</div>
+
 
 <div data-role="page" id="panel-fixed-page2">
 
-    <div data-role="header">
-        <h1>Landing page</h1>
-    </div><!-- /header -->
+    <div data-role="header" data-position="fixed">
+        <h1>Макет</h1>
+        <a href="#nav-panel-2" data-icon="bars" data-iconpos="notext">Menu</a>
+        <a href="#add-form" data-icon="gear" data-iconpos="notext">Add</a>
+    </div>
 
+    <div data-role="panel" data-position-fixed="true" data-display="push" data-theme="b" id="nav-panel-2">
+
+        <ul data-role="listview">
+            <li data-icon="delete"><a href="#" data-rel="close">Закрыть меню</a></li>
+            <li><a href="#panel-fixed-page1">Главная</a></li>
+            <li><a href="#panel-fixed-page3">Услуги</a></li>
+            <li><a href="#panel-fixed-page4">Контакты</a></li>
+            <li><a href="#panel-fixed-page5">Проезд</a></li>
+            <li><a href="#panel-fixed-page6">PROFIT</a></li>
+
+        </ul>
+
+    </div>
+    <div role="main" class="ui-content jqm-content">
+
+        <p>This is just a landing page.</p>
+
+        <a href="#panel-fixed-page1" class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-mini ui-icon-back ui-btn-icon-left">Back</a>
+
+    </div>
+
+</div>
+
+
+
+<div data-role="page" id="panel-fixed-page3">
+
+    <div data-role="header" data-position="fixed">
+        <h1>Макет</h1>
+        <a href="#nav-panel-3" data-icon="bars" data-iconpos="notext">Menu</a>
+        <a href="#add-form" data-icon="gear" data-iconpos="notext">Add</a>
+    </div>
+
+    <div data-role="panel" data-position-fixed="true" data-display="push" data-theme="b" id="nav-panel-3">
+
+        <ul data-role="listview">
+            <li data-icon="delete"><a href="#" data-rel="close">Закрыть меню</a></li>
+            <li><a href="#panel-fixed-page1">Главная</a></li>
+            <li><a href="#panel-fixed-page2">Акции</a></li>
+            <li><a href="#panel-fixed-page4">Контакты</a></li>
+            <li><a href="#panel-fixed-page5">Проезд</a></li>
+            <li><a href="#panel-fixed-page6">PROFIT</a></li>
+
+        </ul>
+
+    </div>
+    <div role="main" class="ui-content jqm-content">
+
+        <ul data-role="listview" data-split-icon="gear" data-split-theme="a" data-inset="true">
+            <li><a href="#">
+                <img src="../_assets/img/album-bb.jpg">
+                <h2>Broken Bells</h2>
+                <p>Broken Bells</p></a>
+                <a href="#purchase" data-rel="popup" data-position-to="window" data-transition="pop">Purchase album</a>
+            </li>
+            <li><a href="#">
+                <img src="../_assets/img/album-hc.jpg">
+                <h2>Warning</h2>
+                <p>Hot Chip</p></a>
+                <a href="#purchase" data-rel="popup" data-position-to="window" data-transition="pop">Purchase album</a>
+            </li>
+            <li><a href="#">
+                <img src="../_assets/img/album-p.jpg">
+                <h2>Wolfgang Amadeus Phoenix</h2>
+                <p>Phoenix</p></a>
+                <a href="#purchase" data-rel="popup" data-position-to="window" data-transition="pop">Purchase album</a>
+            </li>
+        </ul>
+        <div data-role="popup" id="purchase" data-theme="a" data-overlay-theme="b" class="ui-content" style="max-width:340px; padding-bottom:2em;">
+
+            <form class="userform">
+
+                <h3>Записаться на приём по акции</h3>
+                <p>Укажите свои контактные данные, наш сотрудник вам позвонит.</p>
+                <label for="name">Username:</label>
+                <input type="text" name="name" id="name" ng-model="name" value="" data-clear-btn="true" data-mini="true">
+
+                <label for="password">Password:</label>
+                <input type="text" name="password" id="phone" ng-model="phone" value="" data-clear-btn="true" autocomplete="off" data-mini="true">
+
+                <div class="ui-grid-a">
+                    <div class="ui-block-a"><a href="#" data-rel="close" class="ui-btn ui-shadow ui-corner-all ui-btn-b ui-mini">Отмена</a></div>
+                    <div class="ui-block-b"><a href="#" data-rel="close" class="ui-btn ui-shadow ui-corner-all ui-btn-a ui-mini" ng-click="register()">Записаться</a></div>
+                </div>
+            </form>
+
+
+        </div>
+
+    </div>
+
+</div>
+
+
+
+<div data-role="page" id="panel-fixed-page4">
+
+    <div data-role="header" data-position="fixed">
+        <h1>Макет</h1>
+        <a href="#nav-panel-4" data-icon="bars" data-iconpos="notext">Menu</a>
+        <a href="#add-form" data-icon="gear" data-iconpos="notext">Add</a>
+    </div>
+
+    <div data-role="panel" data-position-fixed="true" data-display="push" data-theme="b" id="nav-panel-4">
+
+        <ul data-role="listview">
+            <li data-icon="delete"><a href="#" data-rel="close">Закрыть меню</a></li>
+            <li><a href="#panel-fixed-page1">Главная</a></li>
+            <li><a href="#panel-fixed-page2">Акции</a></li>
+            <li><a href="#panel-fixed-page3">Услуги</a></li>
+            <li><a href="#panel-fixed-page5">Проезд</a></li>
+            <li><a href="#panel-fixed-page6">PROFIT</a></li>
+
+        </ul>
+
+    </div>
     <div role="main" class="ui-content jqm-content">
 
         <p>This is just a landing page.</p>
@@ -117,7 +230,68 @@
 
     </div><!-- /content -->
 
-</div><!-- /page -->
+</div>
+
+
+
+<div data-role="page" id="panel-fixed-page5">
+
+    <div data-role="header" data-position="fixed">
+        <h1>Макет</h1>
+        <a href="#nav-panel-5" data-icon="bars" data-iconpos="notext">Menu</a>
+        <a href="#add-form" data-icon="gear" data-iconpos="notext">Add</a>
+    </div>
+
+    <div data-role="panel" data-position-fixed="true" data-display="push" data-theme="b" id="nav-panel-5">
+
+        <ul data-role="listview">
+            <li data-icon="delete"><a href="#" data-rel="close">Закрыть меню</a></li>
+            <li><a href="#panel-fixed-page1">Главная</a></li>
+            <li><a href="#panel-fixed-page2">Акции</a></li>
+            <li><a href="#panel-fixed-page3">Услуги</a></li>
+            <li><a href="#panel-fixed-page4">Контакты</a></li>
+            <li><a href="#panel-fixed-page6">PROFIT</a></li>
+
+        </ul>
+
+    </div>
+
+</div>
+
+
+
+<div data-role="page" id="panel-fixed-page6">
+
+    <div data-role="header" data-position="fixed">
+        <h1>Макет</h1>
+        <a href="#nav-panel-6" data-icon="bars" data-iconpos="notext">Menu</a>
+        <a href="#add-form" data-icon="gear" data-iconpos="notext">Add</a>
+    </div>
+
+    <div data-role="panel" data-position-fixed="true" data-display="push" data-theme="b" id="nav-panel-6">
+
+        <ul data-role="listview">
+            <li data-icon="delete"><a href="#" data-rel="close">Закрыть меню</a></li>
+            <li><a href="#panel-fixed-page1">Главная</a></li>
+            <li><a href="#panel-fixed-page2">Акции</a></li>
+            <li><a href="#panel-fixed-page3">Услуги</a></li>
+            <li><a href="#panel-fixed-page4">Контакты</a></li>
+            <li><a href="#panel-fixed-page5">Проезд</a></li>
+
+        </ul>
+
+    </div>
+    <div role="main" class="ui-content jqm-content">
+
+        <p>This is just a landing page.</p>
+
+        <a href="#panel-fixed-page1" class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-mini ui-icon-back ui-btn-icon-left">Back</a>
+
+    </div><!-- /content -->
+
+</div>
+
+
 
 </body>
 </html>
